# plutus-script-evaluation

./: .gitignore  README.md  add_srp.sh  cabal.project  flake.nix
.github/workflows/: evaluate.yml  slack-message-broker.yml
cardano-streaming/examples/: Common.hs  Example1.hs  Example2.hs
cardano-streaming/src/Cardano/: Streaming.hs
cardano-streaming/src/Cardano/Streaming/: Callbacks.hs  Helpers.hs
database/: db.dbm  db.sql
database/sql/: builtin_counts.sql  function_jsonb_array_to_text_array.sql  script_builtin_counts.sql  view_builtin_counts.sql  view_script_builtin_counts.sql  view_script_evaluation_events_v1.sql  view_script_evaluation_events_v2.sql  view_script_evaluation_events_v3.sql  view_scripts_by_language_protocol_ver.sql
doc/adr/: 0001-record-architecture-decisions.md  0002-store-script-evaluation-events-in-a-database.md
grafana/: dashboard.json
index-script-evaluations/: cabal.project  flake.nix  index-script-evaluations.cabal
index-script-evaluations/deserialise-scripts/exe/: Main.hs
index-script-evaluations/deserialise-scripts/lib/: Deserialise.hs
index-script-evaluations/dump-script-events/: Main.hs  Options.hs
index-script-evaluations/lib/: Dump.hs  FileStorage.hs  LedgerStates.hs  Render.hs  Streaming.hs  Types.hs
index-script-evaluations/lib/Database/: Orphans.hs  Schema.hs
index-script-evaluations/lib/LedgerEvents/: FileWriter.hs
index-script-evaluations/load-script-events/: Load.hs  Main.hs  Options.hs
index-script-evaluations/load-script-events/LedgerEvents/: DbLoader.hs
index-script-evaluations/materialise-views/exe/: Main.hs
index-script-evaluations/nix/: outputs.nix  pkgs.nix  project.nix  shell.nix
nix/: outputs.nix  project.nix  shell.nix
plutus-script-evaluation/: plutus-script-evaluation.cabal
plutus-script-evaluation-test/: plutus-script-evaluation-test.cabal
plutus-script-evaluation-test/lib/: FileStorage.hs  LedgerStates.hs  Options.hs  Types.hs
plutus-script-evaluation-test/testlib/: FileStorage.hs  LedgerEvents.hs  LedgerStates.hs  Streaming.hs
plutus-script-evaluation-test/testlib/Plutus/Script/Evaluation/: Dump.hs  Options.hs  Types.hs
plutus-script-evaluation/aggregate-script-events/: Aggregate.hs  Main.hs  Options.hs
plutus-script-evaluation/deserialise-scripts/: Deserialise.hs  Main.hs  Options.hs
plutus-script-evaluation/dump-script-events/: Dump.hs  Main.hs  Options.hs
plutus-script-evaluation/evaluate-scripts/: Evaluate.hs  Main.hs  Options.hs
plutus-script-evaluation/lib/: Aggregate.hs  Database.hs  Deserialise.hs  Dump.hs  Evaluate.hs  FileStorage.hs  LedgerEvents.hs  LedgerStates.hs  Load.hs  Materialise.hs  Render.hs  Streaming.hs  Types.hs
plutus-script-evaluation/lib/Database/: Orphans.hs  Query.hs  Schema.hs
plutus-script-evaluation/lib/LedgerEvents/: DbLoader.hs
plutus-script-evaluation/load-script-events/: Load.hs  Main.hs  Options.hs
plutus-script-evaluation/materialise-views/: Options.hs
run-script-evaluations/: add_srp.sh  cabal.project  flake.nix  run-script-evaluations.cabal  run_on_server.sh  value_stats.txt
run-script-evaluations/nix/: outputs.nix  project.nix  shell.nix
run-script-evaluations/run-evaluations/: Database.hs  Evaluate.hs  Main.hs
run-script-evaluations/run-evaluations/Database/PostgreSQL/Simple/: Orphans.hs
run-script-evaluations/src/: Database.hs  Evaluate.hs  Main.hs  Options.hs
run-script-evaluations/value-statistics/: Main.hs  Options.hs  README.md  ValueStats.hs
run-script-evaluations/value-statistics/Data/IORef/: Strict.hs
