cabal-version: 3.0
name:          index-script-evaluations
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  build-depends:      base ^>=4.18
  ghc-options:
    -O2 -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints

-- Public library contains functionality for dumping and loading script events
library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules:
    Database
    Database.Orphans
    Database.Query
    Database.Schema
    Dump
    FileStorage
    LedgerEvents.FileWriter
    LedgerStates
    Render
    Streaming
    Types

  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-slotting
    , deepseq
    , dlist
    , int-cast
    , murmur-hash                                  ^>=0.1.0.10
    , opaleye
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , path
    , path-io
    , plutus-core
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , postgresql-simple
    , product-profunctors
    , serialise
    , string-interpolate                           ^>=0.3
    , text
    , transformers
    , unliftio-core

-- Executable for dumping script events to file system
executable dump-script-events
  import:         lang
  hs-source-dirs: dump-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options
  build-depends:
    , bytestring
    , cardano-api
    , index-script-evaluations
    , optparse-applicative
    , path
    , postgresql-simple
    , with-utf8

-- Executable for uploading script events to database
executable load-script-events
  import:         lang
  hs-source-dirs: load-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:
    LedgerEvents.DbLoader
    Load
    Options

  build-depends:
    , bytestring
    , cardano-api               ^>=10.14.1.0
    , cardano-ledger-binary
    , cardano-ledger-core
    , index-script-evaluations
    , lib-deserialise-scripts
    , lib-materialise-views
    , murmur-hash
    , optparse-applicative
    , path
    , path-io
    , plutus-core
    , plutus-ledger-api
    , postgresql-simple
    , pretty-show
    , serialise
    , string-interpolate
    , with-utf8

-- Internal library for deserialising script events 
-- (shared by several executables)
library lib-deserialise-scripts
  import:          lang
  hs-source-dirs:  deserialise-scripts/lib
  exposed-modules: Deserialise
  build-depends:
    , aeson
    , base64
    , bytestring
    , cborg
    , index-script-evaluations
    , mtl
    , plutus-core
    , plutus-ledger-api
    , postgresql-simple
    , some
    , string-interpolate
    , vector

-- Executable for deserialising script events
executable deserialise-scripts
  import:         lang
  hs-source-dirs: deserialise-scripts/exe
  main-is:        Main.hs
  ghc-options:    -threaded -with-rtsopts=-N
  other-modules:  Options
  build-depends:
    , aeson
    , base16-bytestring
    , base64
    , bytestring
    , cborg
    , lib-deserialise-scripts
    , mtl
    , optparse-applicative
    , plutus-core
    , plutus-ledger-api
    , postgresql-simple
    , some
    , string-interpolate
    , vector
    , with-utf8

-- Internal library for materialising views 
-- (shared by several executables)
library lib-materialise-views
  import:          lang
  hs-source-dirs:  materialise-views/lib
  exposed-modules: Materialise
  build-depends:   postgresql-simple

-- Executable for materialising views
executable materialise-views
  import:         lang
  hs-source-dirs: materialise-views/exe
  main-is:        Main.hs
  ghc-options:    -threaded -with-rtsopts=-N
  other-modules:  Options
  build-depends:
    , bytestring
    , lib-materialise-views
    , optparse-applicative
    , postgresql-simple
    , with-utf8
