cabal-version: 3.0
name:          plutus-script-evaluation-test
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NamedFieldPuns
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -O2 -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library testlib
  import:          lang
  hs-source-dirs:  testlib
  other-modules:
    FileStorage
    LedgerEvents
    LedgerStates
    Render
    Streaming

  exposed-modules:
    Plutus.Script.Evaluation.Dump
    Plutus.Script.Evaluation.Options
    Plutus.Script.Evaluation.Types

  build-depends:
    , async
    , base                                         >=4.9    && <5
    , base16-bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , cardano-slotting                             ^>=0.2
    , containers                                   ^>=0.6.7
    , dlist
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , path
    , path-io
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , serialise
    , string-interpolate                           ^>=0.3
    , text
    , transformers

executable dump-script-events
  import:         lang
  hs-source-dirs: dump-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  build-depends:
    , base                  >=4.9 && <5
    , optparse-applicative
    , testlib
