cabal-version: 3.0
name:          plutus-script-evaluation
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:
    -O2 -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wunused-packages

common deps
  build-depends: base >=4.9 && <5

library
  import:          lang, deps
  hs-source-dirs:  lib
  exposed-modules:
    Aggregate
    Database
    Database.Orphans
    Deserialise
    Dump
    FileStorage
    LedgerEvents.DbLoader
    LedgerEvents.FileWriter
    LedgerStates
    Load
    Render
    Streaming
    Types

  build-depends:
    , aeson
    , async
    , base16-bytestring
    , base64
    , bytestring
    , cardano-api                                  ^>=9.3.0.0
    , cardano-ledger-alonzo
    , cardano-ledger-binary
    , cardano-ledger-core
    , cardano-slotting                             ^>=0.2.0.0
    , deepseq
    , dlist
    , int-cast
    , mtl
    , murmur-hash                                  ^>=0.1.0.10
    , opaleye
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , path
    , path-io
    , plutus-core
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , postgresql-simple
    , product-profunctors
    , serialise
    , some
    , string-interpolate                           ^>=0.3
    , text
    , transformers
    , vector

executable dump-script-events
  import:         lang, deps
  hs-source-dirs: dump-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options
  build-depends:
    , cardano-api               ^>=9.3.0.0
    , optparse-applicative
    , path
    , plutus-script-evaluation
    , with-utf8

executable load-script-events
  import:         lang, deps
  hs-source-dirs: load-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options
  build-depends:
    , cardano-api               ^>=9.3.0.0
    , optparse-applicative
    , path
    , plutus-script-evaluation
    , with-utf8

executable aggregate-script-events
  import:         lang, deps
  hs-source-dirs: aggregate-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options
  build-depends:
    , optparse-applicative
    , path
    , plutus-script-evaluation
    , with-utf8

executable deserialise-scripts
  import:         lang, deps
  hs-source-dirs: deserialise-scripts
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options
  build-depends:
    , optparse-applicative
    , plutus-script-evaluation
    , with-utf8
