cabal-version: 3.0
name:          plutus-script-evaluation
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:
    -O2 -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints

common deps
  build-depends: base >=4.9 && <5

common deps-exe
  import:        deps
  build-depends:
    , bytestring
    , optparse-applicative
    , path
    , plutus-script-evaluation
    , postgresql-simple
    , with-utf8

library
  import:          lang, deps
  hs-source-dirs:  lib
  exposed-modules:
    Aggregate
    Database
    Database.Orphans
    Database.Query
    Database.Schema
    Deserialise
    Dump
    Evaluate
    FileStorage
    LedgerEvents.DbLoader
    LedgerEvents.FileWriter
    LedgerStates
    Load
    Materialise
    Render
    Streaming
    Types

  build-depends:
    , aeson
    , base16-bytestring
    , base64
    , bytestring
    , cardano-api                                  ^>=10.4
    , cardano-ledger-alonzo
    , cardano-ledger-binary
    , cardano-ledger-core
    , cardano-slotting                             ^>=0.2.0.0
    , cborg
    , containers
    , deepseq
    , dlist
    , int-cast
    , lens
    , mtl
    , murmur-hash                                  ^>=0.1.0.10
    , opaleye
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , path
    , path-io
    , plutus-core
    , plutus-ledger-api
    , plutus-ledger-api:plutus-ledger-api-testlib
    , postgresql-simple
    , prettyprinter-configurable
    , product-profunctors
    , serialise
    , some
    , string-interpolate                           ^>=0.3
    , text
    , time
    , transformers
    , unliftio
    , unliftio-core
    , vector

executable dump-script-events
  import:         lang, deps-exe
  hs-source-dirs: dump-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options
  build-depends:  cardano-api ^>=10.4

executable load-script-events
  import:         lang, deps-exe
  hs-source-dirs: load-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options
  build-depends:
    , cardano-api  ^>=10.4
    , pretty-show

executable aggregate-script-events
  import:         lang, deps-exe
  hs-source-dirs: aggregate-script-events
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options

executable deserialise-scripts
  import:         lang, deps-exe
  hs-source-dirs: deserialise-scripts
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options

executable materialise-views
  import:         lang, deps-exe
  hs-source-dirs: materialise-views
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  other-modules:  Options

executable evaluate-scripts
  import:         lang, deps-exe
  hs-source-dirs: evaluate-scripts
  main-is:        Main.hs
  ghc-options:    -threaded -with-rtsopts=-N
  other-modules:  Options
  build-depends:
    , cardano-api       ^>=10.4
    , cardano-slotting
    , text
    , unliftio-core
