cabal-version: 3.0
name:          run-script-evaluations
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:
    -O2 -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints

executable run-script-evaluations
  import:         lang
  hs-source-dirs: run-evaluations
  main-is:        Main.hs
  ghc-options:    -threaded -with-rtsopts=-N
  other-modules:
    Database
    Database.PostgreSQL.Simple.Orphans
    Evaluate
    Options

  build-depends:
    , base                        >=4.9    && <5
    , bytestring
    , cardano-slotting
    , containers
    , murmur-hash
    , optparse-applicative
    , plutus-core                 >=1.52.0.0
    , plutus-ledger-api           >=1.52.0.0
    , postgresql-simple
    , prettyprinter-configurable
    , serialise
    , text
    , time
    , transformers
    , unliftio
    , with-utf8

executable value-statistics
  import:         lang
  hs-source-dirs: value-statistics, run-evaluations
  main-is:        Main.hs
  ghc-options:    -threaded -with-rtsopts=-N
  other-modules:
    Data.IORef.Strict
    Database
    Database.PostgreSQL.Simple.Orphans
    Options
    ValueStats

  build-depends:
    , aeson
    , aeson-pretty
    , base                  >=4.9 && <5
    , bytestring
    , containers
    , deepseq
    , nothunks
    , optparse-applicative
    , plutus-core           >=1.52.0.0
    , plutus-ledger-api     >=1.52.0.0
    , plutus-tx             >=1.52.0.0
    , postgresql-simple
    , serialise
    , text
    , time
    , unix
    , with-utf8
